--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,18 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  
+  <!-- 서블릿 등록 -->
+  <servlet>
+  	<servlet-name>MyFirstServlet</servlet-name>
+  	<servlet-class>HelloServlet</servlet-class>
+  	<!-- 패키지명 포함 전체 이름 -->
+  </servlet>
+  
+  <!-- Servlet Mapping 등록: URL Mapper -->
+  <servlet-mapping>
+  	<servlet-name>MyFirstServlet</servlet-name>
+  	<url-pattern>/hs</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
