--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,4 +46,9 @@
   	<url-pattern>/hs</url-pattern>
   </servlet-mapping>
   
+  <!-- error page -->
+  <error-page>
+  	<exception-type>java.lang.Throwable</exception-type>
+  	<location>/views/errors/error.jsp</location>
+  </error-page>
 </web-app>
