--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -51,4 +51,9 @@
   	<exception-type>java.lang.Throwable</exception-type>
   	<location>/views/errors/error.jsp</location>
   </error-page>
+  
+  <error-page>
+  	<error-code>404</error-code>
+  	<location>/views/errors/error.404.jsp</location>
+  </error-page>
 </web-app>
