--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,7 +25,7 @@
   </context-param>
   
   <!-- Filter 등록 -->
-  <filter>
+  <!-- filter>
   	<filter-name>EncodingFilter</filter-name>
   	<filter-class>himedia.kdt.filter.EncodingFilter</filter-class>
   </filter>
@@ -33,10 +33,10 @@
   <filter>
   	<filter-name>LoggingFilter</filter-name>
   	<filter-class>himedia.kdt.filter.LoggingFilter</filter-class>
-  </filter>
+  </filter -->
   
   <!-- Filter Mapping -->
-  <filter-mapping>
+  <!-- filter-mapping>
   	<filter-name>EncodingFilter</filter-name>
   	<url-pattern>/*</url-pattern>
   </filter-mapping>
@@ -44,7 +44,7 @@
   <filter-mapping>
   	<filter-name>LoggingFilter</filter-name>
   	<url-pattern>/*</url-pattern>
-  </filter-mapping>
+  </filter-mapping -->
   <!-- 서블릿 등록 -->
   <!-- servlet>
   	<servlet-name>MyFirstServlet</servlet-name>
